<resources>
    <string name="app_name">Healing Tree</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="locate_healing_tree">Locate \nHealing Tree</string>
    <string name="health_records_healing_tree">Health Records \nHealing tree</string>
    <string name="default_notification_channel_id">102030405060</string>

    <string name="diagnostics_at_home_details">For collection of a blood,stool or urine sample,lab technicians will
        visit your home and reports will be submitted by lab technician in the evening or on the next day.It will also
        be updated to you via our Mobile Application
    </string>

    <string name="physiotherapist_details_text">Physiotherapist also helps in the rehabilitation of patients suffering
        from Parkinsons, Paralysis, Stroke, Multiple Sclerosis and Cerebral Palsy. Furthermore,Physiotherapist can heal
        both chronic and acute problems by treating patient at home
    </string>

    <string name="medical_equipment_at_home_details">Getting medical equipment on rent purchase at your doorstep has
        never been this convenient. During difficult phase of life, you or your loved ones might need to rely on various
        medical equipment to get back to normal lifestyle
        \n \n Home Health Care offers a wide range of medical equipment for rent or purchase to make health care more
        accessible and affordable for you
    </string>

    <string name="gold_membership_text">"Gold Membership"</string>
    <string name="please_wait_msg">"Please Wait..."</string>
    <string name="platinum_membership_text">"Platinum Membership"</string>
    <string name="diamond_membership_text">"Diamond Membership"</string>
    <string name="privilage_club_packages_button_text">">> View Privilege Club Packages"</string>
    <string name="privilage_explained_string">"For a small fee every year, we will take care of all your medical requirements. From priority appointments to home delivery of medicines, every aspect of treatment is looked after. And our coordinator will be available to you 24x7 for all your needs."
    </string>

    <string name="book_health_check_text">"<p>Hello Health is a personalised health care programme, which provides
        luxury accommodation in our Silver, Gold, Diamond or Platinum suites and also takes care of your meals the day
        before your check-up.</p>\n\nSign up and check in so you are well-rested and ready to take on the next day!"
    </string>


    <string name="no_internet">No network connection found! Please check your network connection.</string>
    <string name="no_internet_parse_data">No network connection found, So Unable to parse Form Data! Please check your
        network connection.
    </string>
    <string name="response_timeout">Response time out error! Please check your internet connection and try again.
    </string>
    <string name="auth_failure">Server authentication failed! Please try again.</string>
    <string name="server_error">Server isn\'t responding! Please try again.</string>
    <string name="network_error">Network not found! Please check your internet connection and try again.</string>
    <string name="parse_error">Unable to parse Data! Please try again.</string>

    <string name="time_label">
        <font fgcolor="#FF000000">Time:</font>
    </string>
    <string name="remarks_label">
        <font fgcolor='#FF000000'>Remarks:</font>
    </string>

    <string name="facebook_app_id">538308757021410</string>
    <string name="fb_login_protocol_scheme">fb538308757021410</string>
    <string name="title_activity_facebook_testing">FacebookTestingActivity</string>

</resources>
